# hou-rs

./: Cargo.toml
src/: main.rs
src/builders/: config_builder.rs
src/clients/: mod.rs  rustbreak_client.rs
src/command_handlers/: for_command.rs
src/constants/: mod.rs
src/domain/: mod.rs
src/domain/entities/: mod.rs
src/domain/errors/: billable_repository.rs  billable_service.rs  config_builder.rs  mod.rs  project_data_repository.rs  project_service.rs  rustbreak_client.rs  toml_file.rs
src/domain/objects/: mod.rs
src/handlers/: for_command.rs  mod.rs
src/repositories/: billable_repository.rs  mod.rs  project_data_repository.rs
src/services/: billable_service.rs  config_file_service.rs  config_service.rs  file_database_service.rs  file_path_service.rs  file_service.rs  mod.rs  project_service.rs  toml_service.rs
test_helpers/: db.yaml  file.toml  mock_config.toml  read_this.toml  test_billable.yaml  test_projects.yaml
