[package]
name = "hours"
version = "0.1.0"
authors = ["Pyry Kovanen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.116"
